tests/should_fail/let_destructure_tuple_2_on_3.nv
module fail
// Tuple pattern arity mismatch: (a, b) on (Int, Int, Int) 
let (a, b) = (1, 2, 3)
